--- a/R/Binomial_analysis.Rmd
+++ b/R/Binomial_analysis.Rmd
@@ -356,7 +356,7 @@ df <- data.frame(
   Survey_times = as.factor(pa_data_done_12$Survey_times)
 )
 
-# run the GLMM for growth
+# run the GLMM for Shrinkage
 Sh_model_s <- glmer(Discrete_change ~ Shape_Area_log + (1 | Survey_times/Unique_ID), data = df, family = binomial)
 Sh_model_p <- glmer(Discrete_change ~ pa_ratio_log + (1 | Survey_times/Unique_ID), data = df, family = binomial)
 Sh_model_c <- glmer(Discrete_change ~ circ_logit + (1 | Survey_times/Unique_ID), data = df, family = binomial)
@@ -384,7 +384,7 @@ df <- data.frame(
   Survey_times = as.factor(pa_data_done_12$Survey_times)
 )
 
-# run the GLMM for growth
+# run the GLMM for Fission
 F_model_s <- glmer(Discrete_change ~ Shape_Area_log + (1 | Survey_times), data = df, family = binomial)
 F_model_p <- glmer(Discrete_change ~ pa_ratio_log + (1 | Survey_times), data = df, family = binomial)
 F_model_c <- glmer(Discrete_change ~ circ_logit + (1 | Survey_times), data = df, family = binomial)
@@ -392,7 +392,7 @@ F_model_sc <- glmer(Discrete_change ~ Shape_Area_log + circ_logit + (1 | Survey_
 F_model_sxc <- glmer(Discrete_change ~ Shape_Area_log * circ_logit + (1 | Survey_times), data = df, family = binomial)
 
 
-## Calculate the Fission (exclude mortality)
+## Calculate the Fusion (exclude mortality)
 Fates <- "Fu"
 pa_data_done$Discrete_change <- ifelse(pa_data_done$Fate == Fates, 1, ifelse(pa_data_done$Fate != Fates, 0, NA))
 pa_data_done_12 <- filter(pa_data_done, Survey_times == 1 | Survey_times == 2)
@@ -412,7 +412,7 @@ df <- data.frame(
   Survey_times = as.factor(pa_data_done_12$Survey_times)
 )
 
-# run the GLMM for growth
+# run the GLMM for Fusion
 U_model_s <- glmer(Discrete_change ~ Shape_Area_log + (1 | Survey_times), data = df, family = binomial)
 U_model_p <- glmer(Discrete_change ~ pa_ratio_log + (1 | Survey_times), data = df, family = binomial)
 U_model_c <- glmer(Discrete_change ~ circ_logit + (1 | Survey_times), data = df, family = binomial)
