--- a/R/Data_Finalization.Rmd
+++ b/R/Data_Finalization.Rmd
@@ -19,7 +19,7 @@ library(cowplot)
 
 ```{r data import, echo=FALSE}
 ####DATA####
-pa_data <- read_csv("data/OL_PA_all.csv")
+pa_data <- read_csv("data/OL_PA_all_latlon.csv")
 
 ####CLASS CHECK####
 pa_data$Shape_Length <- as.numeric(pa_data$Shape_Length)
